--- a/apps/weather-forecast/src/index.html
+++ b/apps/weather-forecast/src/index.html
@@ -12,6 +12,7 @@
 			href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;700&family=Roboto:wght@300;400;500;700&display=swap"
 			rel="stylesheet"
 		/>
+		<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" rel="stylesheet" />
 	</head>
 	<body>
 		<bp-root></bp-root>
